fix: remove '--enable-preview' in build.gradle
- '--enable-preview'이 자바 21부터 사용 가능하다고 빌드 에러떠서 지움